<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/option_add"
        android:icon="@drawable/ic_add_contact_white"
        android:title="@string/add"
        app:showAsAction="always" />

    <item
        android:id="@+id/option_populate_list"
        android:icon="@drawable/ic_library_add_white"
        android:title="@string/add"
        app:showAsAction="always" />

    <item
        android:id="@+id/option_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"    />

    <item
        android:id="@+id/option_delete"
        android:icon="@drawable/ic_delete_white"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>